CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(st-hello)
SET(PROJECT_VERSION   0.1)
SET(SRCS main.c)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(STLINK REQUIRED stlink)

SET(CMAKE_C_FLAGS " ${STLINK_CFLAGS_OTHER} -Wall -Werror")

INCLUDE_DIRECTORIES(
    ${STLINK_INCLUDE_DIRS}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${STLINK_LIBRARIES}
)

INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION bin)
